--- a/package.json
+++ b/package.json
@@ -1,13 +1,1 @@
-{
-  "name": "ai-chat",
-  "version": "1.0.0",
-  "type": "module",
-  "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
-    "node-fetch": "^3.3.2"
-  },
-  "scripts": {
-    "start": "node server.js"
-  }
-}
+public/package.json
