--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-public/package.json
+{
+  "name": "ai-chat",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.4.5"
+  }
+}
