--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "ai-chat",
+  "name": "my-chat-app",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "dotenv": "^16.4.5"
+    "express": "^4.21.1",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.1"
   }
 }
