--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "my-chat-app",
+  "name": "ai-chat",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.21.1",
-    "axios": "^1.7.2",
-    "dotenv": "^16.4.1"
+    "axios": "^1.6.8",
+    "dotenv": "^16.3.1",
+    "express": "^4.19.2"
   }
 }
