--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-chat",
+  "name": "ai-chatting",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
@@ -7,8 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "dotenv": "^16.3.1",
-    "express": "^4.19.2"
+    "express": "^4.21.1",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.1"
   }
 }
