--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "ai-chatting",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
-  "dependencies": {
-    "axios": "^1.6.0",
-    "dotenv": "^16.1.0",
-    "express": "^4.18.2"
-  },
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1",
+    "openai": "^4.25.0"
   }
 }
