--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "dotenv": "^16.3.1",
-    "openai": "^4.25.0"
+    "axios": "^1.7.0",
+    "dotenv": "^16.3.1"
   }
 }
