--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-chatting",
+  "name": "ai-chat",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.7.0",
-    "dotenv": "^16.3.1"
+    "axios": "^1.5.0",
+    "dotenv": "^16.1.4",
+    "openai": "^5.0.0"
   }
 }
